# scommand

./: .gitignore  README.md  pyproject.toml  requirements.txt
augmentations/: __init__.py
configs/: base.yaml
configs/dataset/: gsc.yaml  shd.yaml  ssc.yaml
configs/variant/: baseline-1l.yaml  baseline.yaml  c1-c2-c3-sparse-hero.yaml  c1-c2-mamba-plif.yaml  c1-c2-sparse-full.yaml  c1-lite-sparse-1e2.yaml  c1-mamba-lite.yaml  c1-mamba.yaml  c2-plif-sparse.yaml  c2-plif.yaml  c3-no-kd-control.yaml  c3-self-kd.yaml  semoe-k2-1l.yaml  semoe-k2.yaml  semoe-k3-no-identity.yaml  semoe-k4-1l.yaml  semoe-k4-fulld.yaml  semoe-k4-lb1e1.yaml  semoe-k4-lb1e3.yaml  semoe-k4-lb5e2.yaml  semoe-k4-no-lb.yaml  semoe-k4.yaml  semoe-k6-1l.yaml  semoe-k6.yaml  sparse-1e1.yaml  sparse-1e2.yaml  sparse-1e3.yaml  sparse-5e2.yaml  sparse-5e3.yaml
models/: __init__.py
models/track_a_attention/: __init__.py
scommander/: __init__.py
scripts/: aggregate_seeds.py  analyze_gate_stability.py  analyze_shd_3axis.sh  anonymize_repo.sh  eval.py  fig9_window_sweep.sh  make_paper_tables.py  measure_3axis.py  measure_sops.py  noise_eval.py  paired_t_test.py  prune_semoe.py  queue_gsc_rerun.sh  queue_k2_promotion.sh  queue_missing_baselines.sh  queue_overnight.sh  queue_phase05_final.sh  queue_rerun_critical.sh  queue_shd_ablations.sh  setup.sh  status_report.py  train.py  training_cost.py  verify_env.py
tests/: test_dataset_shapes.py  test_env.py  test_lif_forward.py  test_modules_shapes.py  test_phase05_phase06.py  test_semoe.py
utils/: __init__.py  logging.py  sops_counter.py
(+46 files in other folders)
